--- a/i3wm/.config/i3/config
+++ b/i3wm/.config/i3/config
@@ -3,11 +3,12 @@
 ###### Settings #############################################################
 
 set $mod Mod1
+# set $altgr Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:monospace 8
-font pango:Fira Mono 8
+# font pango:monospace 8
+font pango:Fira Mono 10 # That fontname though :O
 
 # 10 Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -19,10 +20,11 @@ for_window [class="^.*"] border pixel 0
 ###### Startup ##############################################################
 
 # Double-buffering is important to your health
-exec compton &
+exec "compton -CGfF -b --opengl --vsync opengl-oml --backend glx -i 0.60" #--blur-background --blur-kern 5x5box"
+exec "/bin/sh ~/.fehbg"
+exec "conky -c ~/.conky/i3-conky.conf"
 
-
-###### Bindings #############################################################
+###### Program Bindings #####################################################
 
 # start a terminal
 bindsym $mod+Return exec "urxvt256c"
@@ -33,6 +35,15 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d "exec dmenu_run"
+
+
+###### Bindings #############################################################
+
+bindsym XF86MonBrightnessUp exec "xbacklight +10"
+bindsym XF86MonBrightnessDown exec "xbacklight -10"
+
+bindsym XF86AudioLowerVolume exec "amixer -D pulse sset Master 5%-"
+bindsym XF86AudioRaiseVolume exec "amixer -D pulse sset Master 5%+"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -163,5 +174,10 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+    position top
+    tray_output primary
+
+    font pango:FuraCode Nerd Font Mono 10
+
+    status_command i3blocks #i3status
 }
