--- a/i3blocks/.i3blocks.conf
+++ b/i3blocks/.i3blocks.conf
@@ -26,7 +26,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=$SCRIPT_DIR/$BLOCK_NAME
+command=~/dots/i3blocks/scripts/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -54,7 +54,7 @@ interval=30
 [memory]
 label=SWAP
 instance=swap
-separator=false
+separator=true
 interval=30
 
 # Disk usage
@@ -72,18 +72,18 @@ interval=30
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-#instance=wlan0
+instance=enp8s0
 color=#00FF00
 interval=10
 separator=false
 
 [wifi]
-#instance=wlp3s0
+instance=wlp7s0
 interval=10
 separator=false
 
 [bandwidth]
-#instance=eth0
+instance=enp8s0
 interval=5
 
 # CPU usage
@@ -96,16 +96,16 @@ interval=10
 min_width=CPU: 100.00%
 #separator=false
 
-#[load_average]
-#interval=10
+[load_average]
+interval=10
 
 # Battery indicator
 #
 # The battery instance defaults to 0.
 [battery]
 label=BAT
-#label=⚡
-#instance=1
+label=⚡
+instance=1
 interval=30
 
 # Date Time
