--- a/i3blocks/.i3blocks.conf
+++ b/i3blocks/.i3blocks.conf
@@ -30,6 +30,22 @@ command=~/dots/i3blocks/scripts/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+
+[cpu]
+label=CPU
+interval=2
+
+[ssid]
+label=
+interval=60
+color=#00FFFF
+
+[temperature]
+instance=Core
+label=
+interval=5
+
+
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
@@ -37,7 +53,6 @@ markup=none
 # See the script for details.
 [volume]
 label=VOL
-#label=♪
 instance=Master
 #instance=PCM
 interval=once
@@ -73,7 +88,7 @@ interval=30
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 instance=enp8s0
-color=#00FF00
+color=#00FFFF
 interval=10
 separator=false
 
@@ -102,11 +117,11 @@ interval=10
 # Battery indicator
 #
 # The battery instance defaults to 0.
-[battery]
-label=BAT
-label=⚡
-instance=1
-interval=30
+#[battery]
+#label=BAT
+#label=⚡
+#instance=1
+#interval=30
 
 # Date Time
 #
