--- a/i3wm/.config/i3/config
+++ b/i3wm/.config/i3/config
@@ -22,7 +22,7 @@ for_window [class="^.*"] border pixel 0
 # Double-buffering is important to your health
 exec "compton -CGfF -b --opengl --vsync opengl-oml --backend glx" #-i 0.60 --blur-background --blur-kern 5x5box"
 exec "/bin/sh ~/.fehbg"
-exec "conky -c ~/.conky/i3-conky.conf"
+exec "conky -c ~/.config/conky/i3-conky.conf"
 exec "nm-applet"
 
 ###### Program Bindings #####################################################
@@ -40,8 +40,8 @@ bindsym $mod+d "exec dmenu_run"
 
 ###### Bindings #############################################################
 
-bindsym XF86MonBrightnessUp exec "xbacklight +10"
-bindsym XF86MonBrightnessDown exec "xbacklight -10"
+bindsym XF86MonBrightnessUp exec "brightnessctl s +10%"
+bindsym XF86MonBrightnessDown exec "brightnessctl s 10%-"
 
 bindsym XF86AudioLowerVolume exec "amixer -D pulse sset Master 5%-"
 bindsym XF86AudioRaiseVolume exec "amixer -D pulse sset Master 5%+"
