Edit conky in i3

--- a/conky/.config/conky/i3-conky.conf
+++ b/conky/.config/conky/i3-conky.conf
@@ -10,7 +10,7 @@ conky.config = {
     background = true,		  
     border_width = 5,		  
     cpu_avg_samples = 2,
-    default_color = 'magenta',		-- Mayority of the items used have this color.
+    default_color = 'cyan',		-- Mayority of the items used have this color.
     default_outline_color = 'white',
     default_shade_color = 'black',
     --default_graph_height = '70',	-- Doesn't seem to do a thing
@@ -33,7 +33,7 @@ conky.config = {
     own_window = true,
     own_window_class = 'Conky',
     own_window_type = 'override',
-    --own_window_transparent = true,	-- Make window 100% transparent
+    own_window_transparent = true,	-- Make window 100% transparent
     own_window_argb_visual = true,		-- Make window able to be transparent
     own_window_argb_value = 170,		-- Set amount of transparency
     own_windows_colour = '000000',
