Edit i3 config to fit in better with light backgrounds

--- a/conky/.config/conky/i3-conky.conf
+++ b/conky/.config/conky/i3-conky.conf
@@ -5,13 +5,13 @@
 
 conky.config = {
 	     double_buffer = true,	  -- Prevent text not being removed after frame update
-	     alignment = 'top_left',	  -- Set base-location of Conky, can be moved more precisely with gap_x/y
+	     alignment = 'top_right',	  -- Set base-location of Conky, can be moved more precisely with gap_x/y
 	     -- xinerama_head = 0,	  -- What screen should Conky be on?
     background = true,		  
     border_width = 5,		  
     cpu_avg_samples = 2,
     default_color = 'cyan',		-- Mayority of the items used have this color.
-    default_outline_color = 'white',
+    default_outline_color = 'cyan',
     default_shade_color = 'black',
     --default_graph_height = '70',	-- Doesn't seem to do a thing
     draw_borders = false,
@@ -22,7 +22,7 @@ conky.config = {
     xftalpha = 1,
     font = 'Fira Code Retina:size=12', --'DejaVu Sans Mono:size=12',
     gap_x = 15,
-    gap_y = 30,
+    gap_y = 40,
     minimum_height = 5,
     minimum_width = 5,
     net_avg_samples = 2,
@@ -33,7 +33,7 @@ conky.config = {
     own_window = true,
     own_window_class = 'Conky',
     own_window_type = 'override',
-    own_window_transparent = true,	-- Make window 100% transparent
+    own_window_transparent = false,	-- Make window 100% transparent
     own_window_argb_visual = true,		-- Make window able to be transparent
     own_window_argb_value = 170,		-- Set amount of transparency
     own_windows_colour = '000000',
@@ -45,7 +45,7 @@ conky.config = {
     show_graph_range = false,
     color1 = "000000",
     color2 = "00F000",
-    color3 = "FFFFFF"
+    color3 = "white",
 }
 
 color2 = "00F000"
