Better conky colorscheme

--- a/conky/.config/conky/i3-conky.conf
+++ b/conky/.config/conky/i3-conky.conf
@@ -4,15 +4,16 @@
 ]]
 
 conky.config = {
-	     double_buffer = true,	  -- Prevent text not being removed after frame update
-	     alignment = 'top_right',	  -- Set base-location of Conky, can be moved more precisely with gap_x/y
-	     -- xinerama_head = 0,	  -- What screen should Conky be on?
-    background = true,		  
-    border_width = 5,		  
+	double_buffer = true,	  -- Prevent text not being removed after frame update
+	alignment = 'bottom_right',	  -- Set base-location of Conky, can be moved more precisely with gap_x/y
+	-- xinerama_head = 0,	  -- What screen should Conky be on?
+    background = true,
+    border_width = 5,
     cpu_avg_samples = 2,
-    default_color = 'cyan',		-- Mayority of the items used have this color.
-    default_outline_color = 'cyan',
+    default_color = '#DAF6FF',		-- Mayority of the items used have this color.
+    default_outline_color = '#080E1E',
     default_shade_color = 'black',
+    own_window_colour = '#080E1E',	
     --default_graph_height = '70',	-- Doesn't seem to do a thing
     draw_borders = false,
     draw_graph_borders = true,
@@ -34,9 +35,8 @@ conky.config = {
     own_window_class = 'Conky',
     own_window_type = 'override',
     own_window_transparent = false,	-- Make window 100% transparent
-    own_window_argb_visual = true,		-- Make window able to be transparent
-    own_window_argb_value = 170,		-- Set amount of transparency
-    own_windows_colour = '000000',
+    own_window_argb_visual = true,	-- Make window able to be transparent
+    own_window_argb_value = 160,		-- Set amount of transparency
     stippled_borders = 0,
     update_interval = 1.0, -- Seconds between refresh
     uppercase = false,
@@ -45,7 +45,7 @@ conky.config = {
     show_graph_range = false,
     color1 = "000000",
     color2 = "00F000",
-    color3 = "white",
+    color3 = "#50B6E2",
 }
 
 color2 = "00F000"
