--- a/i3blocks/.i3blocks.conf
+++ b/i3blocks/.i3blocks.conf
@@ -22,6 +22,7 @@
 # signal
 # urgent
 
+
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
@@ -34,11 +35,6 @@ markup=none
 [cpu]
 label=CPU
 interval=2
-
-[ssid]
-label=
-interval=60
-color=#00FFFF
 
 [temperature]
 instance=Core
@@ -86,14 +82,20 @@ interval=30
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-instance=enp8s0
-color=#00FFFF
-interval=10
-separator=false
 
 [wifi]
 instance=wlp7s0
+interval=10
+separator=false
+
+[ssid]
+label=
+interval=60
+color=#00FFFF
+
+[iface]
+instance=enp8s0
+color=#0F5784
 interval=10
 separator=false
 
