--- a/i3wm/.config/i3/config
+++ b/i3wm/.config/i3/config
@@ -20,18 +20,24 @@ for_window [class="^.*"] border pixel 1
 ###### Startup ##############################################################
 
 # Double-buffering is important to your health
-exec "compton -CGfF -b --opengl --vsync opengl-oml --backend glx" #-i 0.60 --blur-background --blur-kern 5x5box"
+#exec "compton -CGfF -b --opengl --vsync opengl-oml --backend glx" #-i 0.60 --blur-background --blur-kern 5x5box"
+exec "compton -b"
+
 exec "/bin/sh ~/.fehbg"
 exec "conky -c ~/.config/conky/i3-conky.conf"
+exec "conky -c ~/.config/conky/i3-clock-darkblue.conf"
 exec "nm-applet"
 exec "redshift -t 5500k:2000k"
 exec "volumeicon"
+exec "emacs --daemon"
 
 ###### Program Bindings #####################################################
 
 # start a terminal
 bindsym $mod+Return exec "urxvt256c"
-bindsym $mod+z exec "urxvt256c"
+bindsym $mod+z exec "gnome-terminal"
+bindsym $mod+x exec "firefox"
+bindsym $mod+c exec "emacsclient -c"
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -192,11 +198,11 @@ bar {
   colors {
     background #080E1E
     statusline #CAD6DF
-    separator  #666666
+    separator  #1076A2
 
-    focused_workspace  #4C7899 #285577 #CAD6DF
-    active_workspace   #333333 #222222 #FFFFFF
-    inactive_workspace #333333 #222222 #888888
+    focused_workspace  #1076A2 #080E1E #1076A2
+    active_workspace   #1076A2 #222222 #1076A2
+    inactive_workspace #080E1E #080E1E #1076A2
     urgent_workspace   #2F343A #900000 #FFFFFF
     binding_mode       #2F343A #900000 #FFFFFF
   }
