--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,1 +1,18 @@
 set -g mouse on
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+set-window-option -g status-left " #S "
+set-window-option -g status-left-fg black
+set-window-option -g status-left-bg cyan
+
+set-window-option -g status-right " %H:%M %d-%b-%y "
+set-window-option -g status-right-fg black
+set-window-option -g status-right-bg cyan
+
+set-window-option -g status-bg blue
+
+set-window-option -g window-status-format " #I: #W "
+
+set-window-option -g window-status-current-format " #I: #W "
+set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-bg black
