Many a improvement here and there.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,3 +16,9 @@ set-window-option -g window-status-format " #I: #W "
 set-window-option -g window-status-current-format " #I: #W "
 set-window-option -g window-status-current-fg green
 set-window-option -g window-status-current-bg black
+
+set -g focus-events on
+set-window-option -g xterm-keys on # for vim
+#set-window-option -g mode-keys vi # vi key
+set -sg escape-time 2 # faster escape delay time
+bind-key r source-file ~/.config/tmux/tmux.conf
