Improve use of clipboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,11 @@
 set -g mouse on
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+set-option -s set-clipboard off
+
+# For vi copy mode bindings
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+# For emacs copy mode bindings
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 
 set-window-option -g status-left " #S "
 #set-window-option -g status-left-fg black
@@ -21,4 +27,3 @@ set -g focus-events on
 set-window-option -g xterm-keys on # for vim
 #set-window-option -g mode-keys vi # vi key
 set -sg escape-time 2 # faster escape delay time
-bind-key r source-file ~/.config/tmux/tmux.conf
