Improved handling of Emacs (24-bit color in CLI, woot!), initial stumpwm config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,3 +27,8 @@ set -g focus-events on
 set-window-option -g xterm-keys on # for vim
 #set-window-option -g mode-keys vi # vi key
 set -sg escape-time 2 # faster escape delay time
+
+# Grabbing C-b is hyper annoying in Emacs-like editors
+set -g prefix Home
+unbind C-b
+bind-key Home send-prefix
