--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,14 @@
-set -g mouse on
+# Don't use alternate screen, preserve regular terminal scrolling
+#set -g status off
+
+set-option -g default-shell $SHELL
+
+#set -g mouse on
+set -g mouse off
+set -g terminal-overrides '*:smcup@:rmcup@'
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set-option -s set-clipboard off
+
 
 # For vi copy mode bindings
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
@@ -15,7 +23,7 @@ set-window-option -g status-right " %H:%M %d-%b-%y "
 #set-window-option -g status-right-fg black
 #set-window-option -g status-right-bg cyan
 
-set-window-option -g status-bg blue
+set-window-option -g status-bg magenta
 
 set-window-option -g window-status-format " #I: #W "
 
@@ -23,12 +31,22 @@ set-window-option -g window-status-current-format " #I: #W "
 #set-window-option -g window-status-current-fg green
 #set-window-option -g window-status-current-bg black
 
+set-window-option -g window-status-current-style bg=black,fg=magenta
+
 set -g focus-events on
 set-window-option -g xterm-keys on # for vim
 #set-window-option -g mode-keys vi # vi key
 set -sg escape-time 2 # faster escape delay time
 
 # Grabbing C-b is hyper annoying in Emacs-like editors
-set -g prefix Home
+#set -g prefix Home
+set -g prefix C-t
 unbind C-b
-bind-key Home send-prefix
+#bind-key Home send-prefix
+#bind-key C-t send-prefix
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g set-titles on
+bind C-l clear-history
