--- a/git/config
+++ b/git/config
@@ -10,6 +10,16 @@
 [gpg]
   program = gpg
 
+# Enforce SSH
+[url "ssh://git@github.com/"]
+  insteadOf = https://github.com/
+[url "ssh://git@gitlab.com/"]
+  insteadOf = https://gitlab.com/
+[url "ssh://git@bitbucket.org/"]
+  insteadOf = https://bitbucket.org/
+[url "ssh://git@codeberg.org/"]
+  insteadOf = https://codeberg.org/
+
 [includeIf "gitdir:~/Workspace/"]
   path = ~/.config/git/config-work
 
